Changed movement and board functions

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <body>
 
 <main>
-  <section class="boardSection"></section>
+  <section class="boardSection">
+    <!-- Populated with functions in board.js -->
+  </section>
   <section class="instructionsSection">
     <div class="instructions">
-      <h1>Instructions</h1>
-      <p>Move using the arrow keys or WASD</p>
+      <h1>Sokoban</h1>
+      <h2>Instructions</h2>
+      <p>Move using the arrow keys or WASD. Get all blocks over to the goal tiles to solve</p>
+      <button onclick="resetBoard()">Reset</button>
     </div>
   </section>
 </main>
