Add box, goal and player icons

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h2>Instructions</h2>
       <p>Move using the arrow keys or WASD. Get all blocks over to the goal tiles to solve</p>
       <button onclick="resetBoard()">Reset</button>
+      <p id="movesCounter">Number of moves: 0</p>
     </div>
   </section>
 </main>
