--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Sokoban game</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/board.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body>
@@ -27,7 +28,6 @@
 </main>
 
 <script src="js/SokobanBase.js"></script>
-<script src="js/app.js"></script>
 <script src="js/board.js"></script>
 <script src="js/movement.js"></script>
 
